# CellSePi

./: .dockerignore  Dockerfile  Listener.py  MANIFEST.in  NOTICE  README.md  config.json  custom_widgets.py  image_processing.py  images.py  main.py  notifier.py  pyproject.toml  requirements.txt  setup.py
.github/workflow/: flet-build.yml
.github/workflows/: cellsepi-build.yml  flet-build.yml
GUI/: CellSePi.py  gui.py  gui_options.py
Test/: main_test.py  test_config.py  test_drawing_util.py
src/: CellSePi.py  avg_diameter.py  config_file.py  cyto_mask_old.py  data_util.py  data_util_old.py  fluorescence.py  image_processing_old.py  image_tuning.py  images.py  main.py  main_old.py  mask.py  notifier.py  segmentation.py
src/GUI/: GUI.py  __init__.py  gui.py  gui_canvas.py  gui_colors.py  gui_config.py  gui_directory.py  gui_fluorescence.py  gui_mask.py  gui_options.py  gui_segmentation.py  gui_test_environment.py
src/GUI/drawing/: gui_drawing.py
src/backend/drawing_window/: drawing_util.py
src/backend/main_window/: avg_diameter.py  cellsepi.py  config_file.py  data_util.py  fluorescence.py  image_tuning.py  images.py  mask.py  segmentation.py
src/cellsepi/: add_module.py  csp.schema.json  expert_constants.py  gui_module.py  gui_pipeline_listener.py  main.py  main_expert_prototype.py
src/drawing/: drawing_util.py
src/frontend/drawing_window/: gui_drawing.py
src/frontend/main_window/: gui.py  gui_canvas.py  (+8 more)
test/: test_module_and_pipe.py
test/test_pipeline/: dummy_modules.py  test_event_manager.py  test_module_and_pipe.py  test_pipeline.py
(+42 files in other folders)
